# co-i

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LEARNING_GOALS.md  README.md  hello_ai.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  web_server.py
coi/models/: anthropic.py  base.py  config.py  conversation.py  openai.py
coi/ui/: conversation_dialog.py  main_window.py
coi/utils/: config.py
src/coi/: __init__.py
src/coi/core/: __init__.py
src/coi/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
src/coi/tools/: __init__.py  base.py  web_search.py
src/coi/utils/: __init__.py  config.py  logging.py
src/coi/web/: __init__.py  app.py
src/coi/web/templates/: index.html
tests/: test_providers.py
